examples/test/testpolicy12947.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12947
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key34: value39
      key45: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value15
          key31: value15
      podSelector:
        matchLabels:
          key29: value7
          key22: value2
          key17: value9
